Fix grid container overflow scroll

--- a/static/home.css
+++ b/static/home.css
@@ -30,7 +30,9 @@ html, body, pre, code, kbd, samp {
 
 #grid-container {
   display: flex;
-  height: calc(100vh - 48.8px);
+  min-height: calc(100vh - 48.8px);
+  min-height: -moz-calc(100vh - 48.8px);
+	min-height: -webkit-calc(100vh - 48.8px);
 }
 
 #empty-container {
@@ -72,6 +74,7 @@ html, body, pre, code, kbd, samp {
   width: calc(100% - 12px);
   margin: 0;
   padding: 6px;
+  resize: vertical;
 }
 
 .fields > hr {
